# shader-renderer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt  gl.h
dependencies/glad/include/glad/: gl.h
dependencies/glad/src/: gl.c
dependencies/imgui/: CMakeLists.txt
res/: common-post.comp  common.comp  default.json  full-screen.vert
res/shaders/: default.comp  raytracer.comp
shaders/: clean.comp  default.comp  screen-slider.frag
src/: Camera.cpp  Camera.h  Config.h  DebugStat.cpp  DebugStat.h  Global.h  PlatformUtils.h  Postprocess.cpp  Postprocess.h  Setting.h  ShaderLoader.cpp  ShaderLoader.h  Timeline.cpp  Timeline.h  UI.cpp  UI.h  app.cpp  app.h  common.h  config.cpp  gl.c  global.h  main.cpp
src/Core/: FileDialog.cpp  FileDialog.h  Ops.cpp  Ops.h  Reloader.cpp  Reloader.h  Setting.h  Task.cpp  Task.h  Timeline.cpp  Timeline.h
src/Renderer/: Camera.cpp  Camera.h  Postprocess.cpp  Render.cpp  Render.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h
src/UI/: DebugStat.cpp  Overlay.cpp  Overlay.h  Shortcut.cpp  SidePanel.cpp  SidePanel.h  UI.cpp  UI.h
src/app/: app.cpp  app.h  context_manager.cpp  context_manager.h
src/core/: error.cpp  error.h  file_dialog.cpp  logger.h  ops.cpp  ops.h  project.cpp  project.h  project_io.cpp  project_io.h  reloader.cpp  reloader.h  report.h  serialize_glm.h  setting.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  task.cpp  timeline.cpp  timeline.h
src/node/: node.cpp  node.h  node_input.cpp  node_input.h  node_registry.cpp  node_registry.h  shader_node.h
src/nodes/: compute_shader_node.cpp  compute_shader_node.h  frag_shader_node.cpp  node_entries.cpp  node_entries.h
src/platform_libs/: platform_utils.cpp  platform_utils.h
src/renderer/: camera.cpp  camera.h  compositor.cpp  compositor.h  file_renderer.cpp  file_renderer.h  modify_compositor.cpp  render.cpp  render.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  shader_loader.cpp  shader_loader.h
src/ui/: compositor_editor.cpp  editor_node_input.cpp  editor_node_input.h  file_dialog.cpp  file_dialog.h  overlay.cpp  popup.cpp  popup.h  popup_edit_uniform.cpp  settings.cpp  shortcut.cpp  side_panel.cpp  side_panel.h  side_panel_compositor.cpp  side_panel_help.cpp  side_panel_setting.cpp  ui.cpp  ui.h
